# monkeysai-text

./: .gitignore  Dockerfile  Makefile  pyproject.toml  snapshot.parquet
app/: dataset.py  main.py  models.py  monkeysai_agent.py  tokenizer.py  train.py
crawl/: run_2025-07-01_2036.jl  run_2025-07-02_1919.jl
data/: latest.parquet  wiki.txt
data_crawl/: run_2025-07-02T02-14-02+00-00.jl  run_2025-07-02T02-42-18+00-00.jl  run_2025-07-02T18-53-13+00-00.jl  scrapy.cfg
data_crawl/.check/: requests.seen
data_crawl/monkeys_crawl/: items.py  middlewares.py  pipelines.py  settings.py
data_crawl/monkeys_crawl/spiders/: discover.py  docs.py
scripts/: jl_to_parquet.py  seed_discover.sh  train_cli.py  train_tokenizer.py
services/text/data/: nav_corpus.txt  tokenizer-merges.txt  tokenizer-vocab.json
tests/: test_generate.py
